Split tests for VTable into the samples as well as core